# admiral-admin

./: .gitignore  CHANGELOG.md  LICENSE  README.md  install.ps1
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: release.yml
cpp/: CMakeLists.txt  README.md  build.ps1
cpp/src/: ap_app.cpp  ap_app.hpp  ap_config.cpp  ap_config.hpp  ap_status_source.cpp  dllmain.cpp  http_server.cpp  http_server.hpp
docs/: architecture.md  commands.md  contributing.md  install.md  native-mod.md  roadmap.md
docs/releases/: v0.8.0.md
mod/: init.lua  mod.json
mod/Scripts/: ap_api.lua  ap_json.lua  ap_spool.lua  main.lua
mod/data/: presets.json
tools/spawn-item/: README.md  sidecar.py  spawn_item.py
web/: app.css  app.js  index.html
